--- a/simplex/index.html
+++ b/simplex/index.html
@@ -18,7 +18,7 @@
 						<p>El método gráfico es un procedimiento de solución de problemas de programación lineal muy limitado en cuanto al número de variables (2 si es un gráfico 2D y 3 si es 3D) pero muy rico en materia de interpretación de resultados e incluso análisis de sensibilidad. Este consiste en representar cada una de las restricciones y encontrar en la medida de lo posible el polígono (poliedro) factible, comúnmente llamado el conjunto solución o región factible, en el cual por razones trigonométricas en uno de sus vértices se encuentra la mejor respuesta (solución óptima).</p>
 					</div>
 					<div class="w3-third w3-container">
-						<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSQZYvQYxxK_OrqcABRLptxJOnIzm1IaxtAECbXQhZ6v4UBD4e_MQ" class="w3-image">
+						<img src="img/grafico.png" class="w3-image">
 					</div>
 			</div>
 		</div>
