--- a/simplex/index.html
+++ b/simplex/index.html
@@ -11,16 +11,34 @@
 </head>
 <body>
 	<div w3-include-html="templates/nav.html" class="w3-top"></div>
-		<div class="w3-main" style="margin-left:250px">
+		<div class="w3-main" style=" min-width:60%; margin-left: 20%; margin-right: 20%;">
 				<div class="w3-row w3-padding-64">
 					<div class="w3-twothird w3-container">
 						<h1 class="w3-text-teal">Método Gráfico</h1>
 						<p>El método gráfico es un procedimiento de solución de problemas de programación lineal muy limitado en cuanto al número de variables (2 si es un gráfico 2D y 3 si es 3D) pero muy rico en materia de interpretación de resultados e incluso análisis de sensibilidad. Este consiste en representar cada una de las restricciones y encontrar en la medida de lo posible el polígono (poliedro) factible, comúnmente llamado el conjunto solución o región factible, en el cual por razones trigonométricas en uno de sus vértices se encuentra la mejor respuesta (solución óptima).</p>
 					</div>
 					<div class="w3-third w3-container">
-						<img src="img/grafico.PNG" class="w3-image">
+						<img src="img/grafico.png" class="w3-image">
 					</div>
-			</div>
+				</div>
+				<div class="w3-row w3-padding-64">
+					<div class="w3-twothird w3-container">
+						<h1 class="w3-text-teal">Simplex de dos fases</h1>
+						<p></p>
+					</div>
+					<div class="w3-third w3-container">
+						<img src="img/grafico.png" class="w3-image">
+					</div>
+				</div>
+				<div class="w3-row w3-padding-64">
+					<div class="w3-twothird w3-container">
+						<h1 class="w3-text-teal">Método de Multiplicadores</h1>
+						<p>Solo con Esquina Noroeste</p>
+					</div>
+					<div class="w3-third w3-container">
+						<img src="img/grafico.png" class="w3-image">
+					</div>
+				</div>
 		</div>
 	<footer w3-include-html="templates/footer.html" class="w3-container w3-padding-64 w3-center  w3-opacity"></footer>
 	<script>w3IncludeHTML();</script>
